fixed alignment of stack and heap

--- a/deeva/static/css/stack.css
+++ b/deeva/static/css/stack.css
@@ -37,7 +37,7 @@
 }
 
 #heap{
- padding-top:50px;
+
 }
 #indice td, #value td{
   min-width: 30px;
